# IT_ONE-Cup-Mobile-23

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json
clients/java/: Dockerfile  entrypoint.sh  pom.xml
clients/java/src/main/java/pipes/: Main.java
clients/kotlin/: Dockerfile  entrypoint.sh  pom.xml
clients/kotlin/src/main/kotlin/pipes/: Main.kt
clients/python/: Dockerfile  entrypoint.sh  main.py
clients/swift/: Dockerfile  Package.swift  entrypoint.sh
clients/swift/Sources/Pipes/: main.swift
frontend/: .dockerignore  .gitignore  index.html  package.json
frontend/src/: main.ts  style.css
java_test/: .gitignore  Main.java
src/: codehub.rs  logger.rs  main.rs  model.rs  serde_duration.rs  server.rs
