[package]
name = "itonecup-mobile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
actix-web = "4"
thiserror = "1"
async-mutex = "1"
futures = "0.3"
actix-web-actors = "4"
actix = "0.13"
actix-files = "0.6"
actix-web-httpauth = "0.8"
